--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -169,9 +169,10 @@
 
     <script src="js/data.js"></script>
     <script src="navigation.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
     
     <style id="dynamic-styles"></style>
 </body>
+
