--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -169,10 +169,11 @@
 
     <script src="js/data.js"></script>
     <script src="navigation.js"></script>
-    <script src="js/navigation.js"></script>
+    <script src="js/knowledge-base.js"></script>
 </body>
 </html>
     
     <style id="dynamic-styles"></style>
 </body>
+
 
