--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -169,11 +169,12 @@
 
     <script src="js/data.js"></script>
     <script src="navigation.js"></script>
-    <script src="js/knowledge-base.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
     
     <style id="dynamic-styles"></style>
 </body>
+
 
 
