--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -169,13 +169,9 @@
 
     <script src="js/data.js"></script>
     <script src="navigation.js"></script>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
     
     <style id="dynamic-styles"></style>
 </body>
-
-
-
-
